Fixing overflow on brands page

--- a/assets/theme/clixtv/src/ui/categories/category.less
+++ b/assets/theme/clixtv/src/ui/categories/category.less
@@ -1,5 +1,5 @@
 .clix-category-page {
-
+    overflow-x: hidden;
     .category-page-container {
         position: relative;
         z-index: 2000;
